--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "poi-plugin-magic-change",
   "version": "0.0.1-beta.1",
   "description": "ship magic change",
+  "apiVer": "8.1.0-beta.2",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
