--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poi-plugin-magic-change",
-  "version": "0.0.1-beta.7",
+  "version": "0.0.1",
   "description": "依赖于岛风Go的舰娘魔改管理工具",
   "apiVer": "8.1.0-beta.3",
   "main": "index.js",
